# Barebones-Game-Engine

./: CMakeLists.txt  README.md
src/: graphics.c  graphics.h  linmaths.c  linmaths.h  main.c  sprite_struct.h  sprites.c  sprites.h  world.c  world.h
src/shd/: texture.frag  texture.vert
